--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,8 @@
 ---
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 interface Props {
-	title: string;
+  title: string;
 }
 
 const { title } = Astro.props;
@@ -8,44 +10,83 @@ const { title } = Astro.props;
 
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Astro description" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{title}</title>
+  </head>
+  <body>
+    <Header />
+    <div class="pt-2">
+      <div id="slot-container"></div>
+      <slot />
+    </div>
+    <Footer />
+    <div
+      class="absolute inset-0 top-0 -z-10 h-full w-full bg-white dark:bg-slate-950"
+    >
+      <div
+        class="absolute bottom-auto left-auto right-0 top-0 h-[900px] w-[700px] -translate-x-[10%] translate-y-[5%] rounded-full bg-[rgba(149,135,221,0.62)] dark:bg-[radial-gradient(circle_500px_at_50%_200px,#3e3e3e,transparent)] opacity-50 blur-[80px]"
+      >
+      </div>
+      <div
+        class="absolute bottom-auto left-auto right-0 top-0 h-[600px] w-[500px] -translate-x-[250%] translate-y-[0%] rounded-full bg-[rgba(149,135,221,0.62)] dark:bg-[radial-gradient(circle_900px_at_60%_200px,#3e3e3e,transparent)] opacity-50 blur-[80px]"
+      >
+      </div>
+    </div>
+  </body>
 </html>
+<script>
+  // On page load or when changing themes, best to add inline in `head` to avoid FOUC
+  if (
+    localStorage.getItem("color-theme") === "dark" ||
+    (!("color-theme" in localStorage) &&
+      window.matchMedia("(prefers-color-scheme: dark)").matches)
+  ) {
+    document.documentElement.classList.add("dark");
+  } else {
+    document.documentElement.classList.remove("dark");
+  }
+</script>
 <style is:global>
-	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
-	}
-	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
-		background-size: 224px;
-	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
-	}
+  :root {
+    --accent: 136, 58, 234;
+    --accent-light: 203 213 225;
+    --accent-dark: 151 65 85;
+    --accent-gradient: linear-gradient(
+      45deg,
+      rgb(var(--accent)),
+      rgb(var(--accent-light)) 50%,
+      white 60%
+    );
+
+    --header-height-big: 5rem;
+    --header-height-small: 4rem;
+  }
+
+  html {
+    font-family: system-ui, sans-serif;
+    /* background: #13151a; */
+    /* background-size: 224px; */
+    color: rgb(var(--accent-dark));
+    background: white;
+  }
+  html.dark {
+    color: rgb(var(--accent-light));
+    background: rgb(2 6 23);
+  }
+  code {
+    font-family:
+      Menlo,
+      Monaco,
+      Lucida Console,
+      Liberation Mono,
+      DejaVu Sans Mono,
+      Bitstream Vera Sans Mono,
+      Courier New,
+      monospace;
+  }
 </style>
