--- a/src/pages/privacy-policy.astro
+++ b/src/pages/privacy-policy.astro
@@ -3,7 +3,9 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="Sync Marks - Política de privacidad">
-  <main class="max-w-[75ch] mx-auto px-4 lg:px-2 space-y-6">
+  <main
+    class="max-w-[75ch] mx-auto px-4 lg:px-2 space-y-6 text-slate-700 dark:text-slate-300"
+  >
     <h1 class="text-2xl font-bold">Política de Privacidad</h1>
     <section>
       <h2 class="text-xl font-bold mb-2">Información que recopilamos</h2>
