--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,11 +1,6 @@
 ---
 import ToggleThemeButton from "./ToggleThemeButton.astro";
 import SyncMarksLogo from "./SyncMarksLogo.astro";
-
-import { getLangFromUrl, useTranslatedPath } from "@/i18n/utils";
-
-const lang = getLangFromUrl(Astro.url);
-const translatePath = useTranslatedPath(lang);
 ---
 
 <header
@@ -15,7 +10,7 @@ const translatePath = useTranslatedPath(lang);
   <div
     class="max-w-screen-xl mx-auto flex justify-between gap-2 items-center dark:text-slate-300 text-slate-700"
   >
-    <a href={translatePath("/")}>
+    <a href={"/"}>
       <SyncMarksLogo />
     </a>
     <div class="flex items-center gap-2">
