--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,14 @@
 ---
 import { EXTENSION_GITHUB_REPO_URL } from "../utils/constants";
+import {
+  getLangFromUrl,
+  useTranslatedPath,
+  useTranslations,
+} from "@/i18n/utils";
+
+const lang = getLangFromUrl(Astro.url);
+const t = useTranslations(lang);
+const translatePath = useTranslatedPath(lang);
 ---
 
 <footer class="p-4">
@@ -7,7 +16,7 @@ import { EXTENSION_GITHUB_REPO_URL } from "../utils/constants";
     class="max-w-screen-xl mx-auto w-full p-6 md:flex md:items-center md:justify-between bg-white/75 rounded-md m-4 dark:bg-gray-900/75"
   >
     <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400"
-      >© 2024 <a href="/" class="hover:underline">Sync Marks</a>
+      >© 2024 <a href="/" class="hover:underline">{t("syncMarks")}</a>
     </span>
     <ul
       class="flex flex-wrap gap-4 items-center mt-3 sm:mt-0 text-sm font-medium text-gray-500 dark:text-gray-400"
@@ -21,8 +30,9 @@ import { EXTENSION_GITHUB_REPO_URL } from "../utils/constants";
         >
       </li> -->
       <li>
-        <a href="/privacy-policy" class="hover:underline me-4 md:me-6"
-          >Privacy Policy</a
+        <a
+          href={translatePath("/politica-de-privacidad")}
+          class="hover:underline me-4 md:me-6">{t("nav.privacyPolicy")}</a
         >
       </li>
       <!-- <li>
@@ -34,3 +44,4 @@ import { EXTENSION_GITHUB_REPO_URL } from "../utils/constants";
     </ul>
   </div>
 </footer>
+<script></script>
