--- a/src/pages/es/politica-de-privacidad.astro
+++ b/src/pages/es/politica-de-privacidad.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from "../layouts/Layout.astro";
+import Layout from "../../layouts/Layout.astro";
 ---
 
 <Layout title="Sync Marks - Política de privacidad">
