--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,24 +1,6 @@
 ---
-import Layout from "@/layouts/Layout.astro";
-import Features from "@/sections/Features.astro";
-import Installation from "@/sections/Installation.astro";
-import Welcome from "@/sections/Welcome.astro";
+import { defaultLang } from "@/i18n/ui";
+
+const preferrefLocale = Astro.preferredLocale || defaultLang;
+return Astro.redirect(`/${preferrefLocale}/`);
 ---
-
-<Layout title="Welcome to Sync Marks">
-  <main class="max-w-[75ch] mx-auto px-4 lg:px-2">
-    <Welcome />
-    <Features />
-    <!-- <Installation /> -->
-  </main>
-</Layout>
-
-<style is:global>
-  .text-gradient {
-    background-image: var(--accent-gradient);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-size: 400%;
-    background-position: 0%;
-  }
-</style>
