--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -119,7 +119,7 @@ const lang = getLangFromUrl(Astro.url);
 
   body {
     margin: 0;
-    min-height: 100dvh; /* polemico, en movil puede cambiar y haria unlayout shift raro, lo probé en Rive */
+    min-height: 100lvh; /* polemico, en movil puede cambiar y haria unlayout shift raro, lo probé en Rive */
   }
 
   h1,
