--- a/src/components/ToggleThemeButton.astro
+++ b/src/components/ToggleThemeButton.astro
@@ -1,7 +1,7 @@
 <button
   id="theme-toggle"
   type="button"
-  class="text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-1.5"
+  class="text-gray-500 dark:text-gray-400 hover:bg-inherit md:hover:bg-gray-100 md:dark:hover:bg-gray-700 focus:outline-none focus:ring-transparent rounded-lg text-sm p-1.5"
 >
   <svg
     id="theme-toggle-dark-icon"
@@ -24,7 +24,7 @@
       clip-rule="evenodd"></path></svg
   >
 </button>
-<script>
+<script is:inline>
   document.addEventListener("astro:page-load", () => {
     // This runs on first page load and after every navigation.
     var themeToggleDarkIcon = document.getElementById("theme-toggle-dark-icon");
