--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,9 +1,11 @@
 ---
 import ToggleThemeButton from "./ToggleThemeButton.astro";
 import SyncMarksLogo from "./SyncMarksLogo.astro";
+import LanguageSelector from "./LanguageSelector.astro";
+import IconMenu from "@/icons/IconMenu.astro";
+import Sidebar from "@/components/Sidebar.astro";
 
 import { getLangFromUrl, useTranslatedPath } from "@/i18n/utils";
-import LanguageSelector from "./LanguageSelector.astro";
 
 const lang = getLangFromUrl(Astro.url);
 const translatePath = useTranslatedPath(lang);
@@ -11,7 +13,7 @@ const translatePath = useTranslatedPath(lang);
 
 <header
   id="header"
-  class="fixed top-0 w-full p-4 !border-b-slate-500 dark:!border-b-slate-700"
+  class="z-40 fixed top-0 w-full p-4 !border-b-slate-500 dark:!border-b-slate-700"
 >
   <div
     class="max-w-screen-xl mx-auto flex justify-between gap-2 items-center dark:text-slate-300 text-slate-700"
@@ -22,21 +24,9 @@ const translatePath = useTranslatedPath(lang);
     <div class="flex items-center gap-2">
       <ToggleThemeButton />
       <LanguageSelector />
+      <div class="hidden md:block"></div>
+      <!-- <Sidebar /> -->
+      <div class="block md:hidden"></div>
     </div>
   </div>
 </header>
-
-<!-- <style>
-  #header {
-    animation: blur-header linear both;
-    animation-timeline: scroll();
-    animation-range: 0 150px;
-  }
-
-  @keyframes blur-header {
-    100% {
-      backdrop-filter: blur(8px);
-      border-bottom: 0.5px solid;
-    }
-  }
-</style> -->
