--- a/src/pages/es/index.astro
+++ b/src/pages/es/index.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "@/layouts/Layout.astro";
 import Features from "@/sections/Features.astro";
-import Installation from "@/sections/Installation.astro";
+// import Installation from "@/sections/Installation.astro";
 import Welcome from "@/sections/Welcome.astro";
 ---
 
