add chrome extension url

--- a/src/components/CTAInstallExtension.astro
+++ b/src/components/CTAInstallExtension.astro
@@ -1,14 +1,17 @@
 ---
 import IconArrowNarrowRight from "@/icons/IconArrowNarrowRight.astro";
 import { getLangFromUrl, useTranslations } from "@/i18n/utils";
+import { EXTENSION_URL_CHROME } from "@/utils/constants";
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
 
-<button
-  class="px-5 py-3 text-base w-fit font-medium bg-gradient-to-br from-purple-500 to-blue-300 dark:from-purple-600 dark:to-blue-500 dark:hover:from-purple-700 dark:hover:to-blue-700 text-white bg-blue-700 transition-all active:scale-95 hover:!bg-opacity-50 rounded-lg text-center inline-flex items-center dark:hover:bg-opacity-50"
->
-  {t("installExtension")}
-  <IconArrowNarrowRight size={24} svgClass="ml-2" />
-</button>
+<a href={EXTENSION_URL_CHROME} target="_blank" rel="noopener noreferrer">
+  <button
+    class="px-5 py-3 text-base w-fit font-medium bg-gradient-to-br from-purple-500 to-blue-300 dark:from-purple-600 dark:to-blue-500 dark:hover:from-purple-700 dark:hover:to-blue-700 text-white bg-blue-700 transition-all active:scale-95 hover:!bg-opacity-50 rounded-lg text-center inline-flex items-center dark:hover:bg-opacity-50"
+  >
+    {t("installExtension")}
+    <IconArrowNarrowRight size={24} svgClass="ml-2" />
+  </button>
+</a>
