--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,7 +13,7 @@ const translatePath = useTranslatedPath(lang);
 
 <header
   id="header"
-  class="z-40 fixed top-0 w-full p-4 !border-b-slate-500 dark:!border-b-slate-700"
+  class="z-40 fixed top-0 w-full p-4 !border-b-slate-500 dark:!border-b-slate-700 header-animate"
 >
   <div
     class="max-w-screen-xl mx-auto flex justify-between gap-2 items-center dark:text-slate-300 text-slate-700"
@@ -30,3 +30,33 @@ const translatePath = useTranslatedPath(lang);
     </div>
   </div>
 </header>
+
+<style>
+  .header-animate {
+    animation: opacity-blur-header-light linear both;
+    animation-timeline: scroll();
+    animation-range: 0 100px;
+  }
+
+  html.dark .header-animate {
+    animation: opacity-blur-header-dark linear both;
+    animation-timeline: scroll();
+    animation-range: 0 100px;
+  }
+
+  @keyframes opacity-blur-header-light {
+    100% {
+      backdrop-filter: blur(4px);
+      border-bottom: 0.5px solid;
+      background-color: rgba(255, 255, 255, 0.4);
+    }
+  }
+
+  @keyframes opacity-blur-header-dark {
+    100% {
+      backdrop-filter: blur(4px);
+      border-bottom: 0.5px solid;
+      background-color: rgba(0, 0, 0, 0.4);
+    }
+  }
+</style>
