--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,7 +33,7 @@ const lang = getLangFromUrl(Astro.url);
     </div>
     <Footer />
     <div
-      class="fixed inset-0 top-0 -z-10 min-h-full h-full w-full bg-white dark:bg-slate-950 bg-cover"
+      class="fixed inset-0 top-0 -z-10 h-full w-full bg-white dark:bg-slate-950 bg-cover"
     >
       <div
         class="absolute bottom-auto left-auto right-0 top-0 h-[900px] w-[700px] -translate-x-[10%] translate-y-[5%] rounded-full bg-[rgba(149,135,221,0.62)] dark:bg-[radial-gradient(circle_500px_at_50%_200px,#3e3e3e,transparent)] opacity-50 blur-[80px]"
