--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,7 +13,7 @@ const translatePath = useTranslatedPath(lang);
 
 <header
   id="header"
-  class="z-40 fixed top-0 w-full p-4 !border-b-slate-500 dark:!border-b-slate-700 header-animate"
+  class="z-[99999] w-full p-4 !border-b-slate-500 dark:!border-b-slate-700 header-animate"
 >
   <div
     class="max-w-screen-xl mx-auto flex justify-between gap-2 items-center dark:text-slate-300 text-slate-700"
@@ -36,6 +36,10 @@ const translatePath = useTranslatedPath(lang);
     animation: opacity-blur-header-light linear both;
     animation-timeline: scroll();
     animation-range: 0 100px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
   }
 
   html.dark .header-animate {
